# ParallelProgramming

./: .gitignore  README.md
Additional/ClientServerDemonstration/: CMakeLists.txt  client.c  master.c  server.c
Additional/Exclude_comm/: CMakeLists.txt  README.md  exclude_communicator.c
Additional/MPI_Accumulate/: CMakeLists.txt  main.c
Additional/SendExploring/: CMakeLists.txt  default_send.c
Additional/Write2File/: CMakeLists.txt  README.md  write_process.c
Exclude_comm/: CMakeLists.txt  exclude_communicator.c
Exponent/: main.c
Integral/: CMakeLists.txt  README.md  acceleration.py  main.cpp
MergeSort/: CMakeLists.txt  README.md  complexity.py  graph.py  main.c
ParallelingLoops/1e/: CMakeLists.txt  acceleration.py  parallel.c  sequential.c
ParallelingLoops/2zh/: CMakeLists.txt  acceleration.py  parallel.cpp  sequential.cpp
ParallelingLoops/3z/: CMakeLists.txt  parallel.cpp  sequential.cpp
ParallelingLoops/ideal/mpi/: CMakeLists.txt  parallel.c  sequential.c
ParallelingLoops/ideal/openmp/: CMakeLists.txt  parallel.cpp  sequential.cpp
TransportEquation/: CMakeLists.txt  README.md  acceleration.py  complexity.py  paint_solution.py  parallel.c  run.py  sequential.c
intro/: CMakeLists.txt  measure_time.c  mpi_hello_world.c  sum.c
intro/mpi/: README.md  circulation.c  sum.c
intro/open_mp/: CMakeLists.txt  HelloWorld.cpp  SeqAccess.cpp  Sum.cpp
intro/threads/: CMakeLists.txt  README.md  hello.cpp  sequential_access.cpp  sum.cpp
